cluster-talos/kubernetes/apps/sabnzbd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sabnzbd
  labels:
    k10.kasten.io/backup: "true"
