cluster-talos/kubernetes/apps/sabnzbd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  parentRefs:
    - name: main
      namespace: cilium
      sectionName: https
  hostnames:
    - sabnzbd.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 3600s
        backendRequest: 3600s
      backendRefs:
        - name: sabnzbd
          port: 8080
